--- a/_sass/minimal-mistakes/_search.scss
+++ b/_sass/minimal-mistakes/_search.scss
@@ -62,7 +62,7 @@
     outline: none;
     box-shadow: none;
     background-color: transparent;
-    font-size: $type-size-3;
+    font-size: 1em !important; // kimjy99.github.io와 동일하게 16px로 고정
 
     @include breakpoint($large) {
       font-size: $type-size-2;
@@ -107,6 +107,10 @@
   .archive__item-excerpt {
     margin-bottom: 0;
   }
+}
+
+.search__toggle .fa-search {
+  font-size: 1em !important; // 돋보기 아이콘도 동일하게 16px로 고정
 }
 
 /* Algolia search */
