--- a/_sass/minimal-mistakes/_variables.scss
+++ b/_sass/minimal-mistakes/_variables.scss
@@ -70,22 +70,22 @@ $header-font-family: $sans-serif !default;
 $caption-font-family: $serif !default;
 
 /* type scale */
-$type-size-1: 2.441em !default; // ~39.056px
-$type-size-2: 1.953em !default; // ~31.248px
-$type-size-3: 1.563em !default; // ~25.008px
-$type-size-4: 1.25em !default; // ~20px
-$type-size-5: 1em !default; // ~16px
-$type-size-6: 0.75em !default; // ~12px
-$type-size-7: 0.6875em !default; // ~11px
-$type-size-8: 0.625em !default; // ~10px
+$type-size-1: 1.953em !default; // ~31.248px (기존 2.441em)
+$type-size-2: 1.563em !default; // ~25.008px (기존 1.953em)
+$type-size-3: 1.25em !default; // ~20px (기존 1.563em)
+$type-size-4: 1em !default; // ~16px (기존 1.25em)
+$type-size-5: 0.75em !default; // ~12px (기존 1em)
+$type-size-6: 0.6875em !default; // ~11px (기존 0.75em)
+$type-size-7: 0.625em !default; // ~10px (기존 0.6875em)
+$type-size-8: 0.5em !default; // ~8px (기존 0.625em)
 
 /* headline scale */
-$h-size-1: 1.563em !default; // ~25.008px
-$h-size-2: 1.25em !default; // ~20px
-$h-size-3: 1.125em !default; // ~18px
-$h-size-4: 1.0625em !default; // ~17px
-$h-size-5: 1.03125em !default; // ~16.5px
-$h-size-6: 1em !default; // ~16px
+$h-size-1: 1.25em !default; // ~20px (기존 1.563em)
+$h-size-2: 1.125em !default; // ~18px (기존 1.25em)
+$h-size-3: 1.0625em !default; // ~17px (기존 1.125em)
+$h-size-4: 1.03125em !default; // ~16.5px (기존 1.0625em)
+$h-size-5: 1em !default; // ~16px (기존 1.03125em)
+$h-size-6: 0.875em !default; // ~14px (기존 1em)
 
 /*
    Colors
