--- a/_sass/minimal-mistakes/_page.scss
+++ b/_sass/minimal-mistakes/_page.scss
@@ -8,7 +8,8 @@
   padding-inline: 1em;
   -webkit-animation: $intro-transition;
   animation: $intro-transition;
-  max-width: 100%;
+  max-width: 100vw; // 전체 뷰포트로 확장
+  width: 100vw;
   -webkit-animation-delay: 0.15s;
   animation-delay: 0.15s;
 
@@ -31,6 +32,22 @@ body {
 .initial-content,
 .search-content {
   flex: 1 0 auto;
+}
+
+.page, .archive {
+  float: none !important;
+  width: 100% !important;
+  padding-inline-end: 0 !important;
+}
+
+// wide 클래스 효과를 항상 적용
+.wide, .page, .archive {
+  @include breakpoint($large) {
+    padding-inline-end: 0 !important;
+  }
+  @include breakpoint($x-large) {
+    padding-inline-end: 0 !important;
+  }
 }
 
 .page {
