--- a/_sass/minimal-mistakes/_page.scss
+++ b/_sass/minimal-mistakes/_page.scss
@@ -8,14 +8,8 @@
   padding-inline: 1em;
   -webkit-animation: $intro-transition;
   animation: $intro-transition;
-  max-width: 100vw; // 전체 뷰포트로 확장
-  width: 100vw;
   -webkit-animation-delay: 0.15s;
   animation-delay: 0.15s;
-
-  @include breakpoint($x-large) {
-    max-width: $max-width;
-  }
 }
 
 body {
@@ -35,9 +29,15 @@ body {
 }
 
 .page, .archive {
-  float: none !important;
-  width: 100% !important;
-  padding-inline-end: 0 !important;
+  @include breakpoint($large) {
+    float: inline-end;
+    width: calc(100% - #{$right-sidebar-width-narrow});
+    padding-inline-end: 0;
+  }
+  @include breakpoint($x-large) {
+    width: calc(100% - #{$right-sidebar-width});
+    padding-inline-end: 0;
+  }
 }
 
 // wide 클래스 효과를 항상 적용
