--- a/_sass/minimal-mistakes/_page.scss
+++ b/_sass/minimal-mistakes/_page.scss
@@ -36,13 +36,13 @@ body {
 .page {
   @include breakpoint($large) {
     float: inline-end;
-    width: calc(100% - 180px); // 기존보다 오른쪽으로 더 넓게
-    padding-inline-end: 180px;
+    width: calc(100% - #{$right-sidebar-width-narrow});
+    padding-inline-end: $right-sidebar-width-narrow;
   }
 
   @include breakpoint($x-large) {
-    width: calc(100% - 180px); // 기존보다 오른쪽으로 더 넓게
-    padding-inline-end: 180px;
+    width: calc(100% - #{$right-sidebar-width});
+    padding-inline-end: $right-sidebar-width;
   }
 
   .page__inner-wrap {
