--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -8,11 +8,19 @@ search: false
 @import "minimal-mistakes/skins/{{ site.minimal_mistakes_skin | default: 'default' }}"; // skin
 @import "minimal-mistakes"; // main partials
 
-// 포스트(글) 영역을 넓히는 커스텀 코드 (왼쪽 여백은 유지, 오른쪽만 넓힘)
+// 포스트(글) 영역을 넓히는 커스텀 코드 (왼쪽 여백은 유지, 오른쪽까지 확장)
+#main {
+  @media (min-width: 1280px) {
+    max-width: 1600px !important; // 원하는 만큼 넓게
+  }
+}
+
 .page {
   @media (min-width: 1280px) {
-    max-width: 1400px !important; // 원하는 만큼 넓게 (검색 버튼보다 넓으면 값 조정)
-    margin-left: calc(#{$right-sidebar-width} + 2em); // 사이드바와의 거리 유지 (기본 300px + 여백)
-    margin-right: 0 !important; // 오른쪽 끝까지
+    width: 100% !important; // sidebar 공간까지 다 차지
+    max-width: 100% !important;
+    padding-inline-end: 0 !important; // 오른쪽 padding 제거
+    margin-left: calc(#{$right-sidebar-width} + 2em); // sidebar와 겹치지 않게
+    margin-right: 0 !important;
   }
 }
