--- a/_sass/minimal-mistakes/_base.scss
+++ b/_sass/minimal-mistakes/_base.scss
@@ -109,11 +109,11 @@ abbr[data-original-title] {
 /* blockquotes */
 
 blockquote {
-  margin-block: 2em;
-  margin-inline-end: 1em;
-  padding-inline: 1em;
-  font-style: italic;
-  border-inline-start: 0.25em solid $primary-color;
+  margin-block: 0;
+  margin-inline: 0;
+  padding-inline: 0;
+  border: none;
+  font-style: normal; // 기울임도 원하지 않으면
 
   cite {
     font-style: italic;
