--- a/_sass/minimal-mistakes/_base.scss
+++ b/_sass/minimal-mistakes/_base.scss
@@ -112,8 +112,8 @@ blockquote {
   margin-block: 0;
   margin-inline: 0;
   padding-inline: 0;
-  border: none;
-  font-style: normal; // 기울임도 원하지 않으면
+  border-inline-start: 0.25em solid $primary-color; // 왼쪽 세로선만 표시
+  // font-style: normal; // 기울임도 원하지 않으면
 
   cite {
     font-style: italic;
